--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -24,7 +24,6 @@
               <li><a href="{% url 'books' %}">All books</a></li>
               <li><a href="">All authors</a></li>
             </ul>
-
             <ul class="sidebar-nav">
                 …
                {% if user.is_authenticated %}
@@ -41,7 +40,17 @@
                {% endif %}
                 …
               </ul>
-            
+              {% if user.is_staff %}
+                <hr>
+                <ul class="sidebar-nav">
+                <li>Staff</li>
+                <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
+                {% if perms.catalog.add_author %}
+                <li><a href="{% url 'author-create' %}">Create author</a></li>
+                {% endif %}
+                </ul>
+                {% endif %}
+
           {% endblock %}
         </div>
         <div class="col-sm-10 ">{% block content %}
