--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -36,7 +36,7 @@
                    </form>
                  </li>
                {% else %}
-                 <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+                 <li><a href="{% url 'login' %}?next={{ request.path }}" id="login-btn">Login</a></li>
                {% endif %}
                 …
               </ul>
